--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "ag-grid-react": "^31.3.1",
     "bootstrap": "^5.3.3",
     "firebase": "^10.12.0",
     "react": "^18.2.0",
