--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "ag-grid-react": "^31.3.1",
     "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
     "firebase": "^10.12.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
