--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@aldabil/react-scheduler": "^2.9.3",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/styled-engine": "^5.15.14",
     "@tiptap/extension-bullet-list": "^2.4.0",
     "@tiptap/extension-list-item": "^2.4.0",
     "@tiptap/extension-ordered-list": "^2.4.0",
@@ -23,6 +27,7 @@
     "bootstrap-icons": "^1.11.3",
     "classnames": "^2.5.1",
     "firebase": "^10.12.0",
+    "mui": "^0.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
