--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "classnames": "^2.5.1",
+    "date-fns": "^3.6.0",
     "firebase": "^10.12.0",
     "mui": "^0.0.1",
     "react": "^18.2.0",
