--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "build-css": "node-sass src/custom.scss src/custom.css",
+    "watch-css": "node-sass src/custom.scss src/custom.css --watch",
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
@@ -32,6 +34,7 @@
     "date-fns": "^3.6.0",
     "firebase": "^10.12.0",
     "mui": "^0.0.1",
+    "node-sass": "^9.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
