--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "mui": "^0.0.1",
     "node-sass": "^9.0.0",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.10.2",
+    "react-bootstrap": "^2.10.4",
+    "react-bootstrap-icons": "^1.11.4",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-modal": "^3.16.1",
