--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@ag-grid-community/client-side-row-model": "^31.3.2",
     "@ag-grid-community/react": "^31.3.2",
     "@ag-grid-community/styles": "^31.3.2",
+    "@ag-grid-enterprise/range-selection": "^32.0.2",
+    "@ag-grid-enterprise/status-bar": "^32.0.2",
     "@aldabil/react-scheduler": "^2.9.3",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
